Added customized alert box. Fixed a grammerical error

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <script src="calculator.js"></script>
     </head>
     <body>
+        <div id="box">Test alert</div>
         <div id="calc">
-            <div id="screen">
-            </div>
+            <div id="screen" onclick="alrt('hello')"></div>
             <div id="Keys">
                 <div class="top" onclick="clearAll()">C</div>
                 <div class="top" onclick="entOp(this)">(</div>
