--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8">.
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Calculator</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-        <link rel="stylesheet" href="calculator.css">
-        <script src="calculator.js"></script>
-    </head>
-    <body>
-        <div id="box">Test alert</div>
-        <div id="calc">
-            <div id="screen" onclick="alrt('hello')"></div>
-            <div id="Keys">
-                <div class="top" onclick="clearAll()">C</div>
-                <div class="top" onclick="entOp(this)">(</div>
-                <div class="top" onclick="entOp(this)">)</div>
-                <div class="top" onclick="backSpace()">
-                    <span class="material-symbols-outlined">backspace</span>
-                </div>
-                <div class="nums" onclick="entNum(this)">7</div>
-                <div class="nums" onclick="entNum(this)">8</div>
-                <div class="nums" onclick="entNum(this)">9</div>
-                <div class="ops" onclick="entOp(this)">÷</div>
-                <div class="nums" onclick="entNum(this)">4</div>
-                <div class="nums" onclick="entNum(this)">5</div>
-                <div class="nums" onclick="entNum(this)">6</div>
-                <div class="ops" onclick="entOp(this)">×</div>
-                <div class="nums" onclick="entNum(this)">1</div>
-                <div class="nums" onclick="entNum(this)">2</div>
-                <div class="nums" onclick="entNum(this)">3</div>
-                <div class="ops" onclick="entOp(this)">-</div>
-                <div class="nums" onclick="entNum(this)">0</div>
-                <div class="nums" onclick="entNum(this)">.</div>
-                <div id="equal" onclick="calculate()">=</div>
-                <div class="ops" onclick="entOp(this)">+</div>
-            </div>
+  <head>
+    <meta charset="utf-8">.
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="calculator.css">
+    <script src="calculator.js"></script>
+  </head>
+  <body>
+    <div id="box"></div>
+    <div id="calc">
+      <div id="screen" onclick="alrt('hello')"></div>
+      <div id="Keys">
+        <div class="top" onclick="clearAll()">C</div>
+        <div class="top" onclick="entOp(this)">(</div>
+        <div class="top" onclick="entOp(this)">)</div>
+        <div class="top" onclick="backSpace()">
+            <span class="material-symbols-outlined">backspace</span>
         </div>
-    </body>
+        <div class="nums" onclick="entNum(this)">7</div>
+        <div class="nums" onclick="entNum(this)">8</div>
+        <div class="nums" onclick="entNum(this)">9</div>
+        <div class="ops" onclick="entOp(this)">÷</div>
+        <div class="nums" onclick="entNum(this)">4</div>
+        <div class="nums" onclick="entNum(this)">5</div>
+        <div class="nums" onclick="entNum(this)">6</div>
+        <div class="ops" onclick="entOp(this)">×</div>
+        <div class="nums" onclick="entNum(this)">1</div>
+        <div class="nums" onclick="entNum(this)">2</div>
+        <div class="nums" onclick="entNum(this)">3</div>
+        <div class="ops" onclick="entOp(this)">-</div>
+        <div class="nums" onclick="entNum(this)">0</div>
+        <div class="nums" onclick="entNum(this)">.</div>
+        <div id="equal" onclick="calculate()">=</div>
+        <div class="ops" onclick="entOp(this)">+</div>
+      </div>
+    </div>
+  </body>
 </html>
